gateway-api/internal/route-whoami-filter.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: whoami-internal
spec:
  parentRefs:
  - name: demo-web-gw-internal
  hostnames:
  - "whoami.34.149.83.234.nip.io"
  rules:
  - filters:
      - type: RequestHeaderModifier
        requestHeaderModifier:
          add:
            - name: meetup
              value: SREFrance
    backendRefs:
    - name: whoami
      port: 80
